--- a/src/components/home/Banner/Banner.module.css
+++ b/src/components/home/Banner/Banner.module.css
@@ -1,5 +1,5 @@
 .banner_container {
-    background: url("../../../assets/banner-img.jpg");
+    background: url("../../../assets/images/banner-img.jpg");
     height: 100vh;
     background-repeat: no-repeat;
     background-position: center;
